--- a/src/Profilepage/Navigation/Profile.css
+++ b/src/Profilepage/Navigation/Profile.css
@@ -1,108 +1,146 @@
-.main-container{
-    border: 1px solid black;
-  }
-  
-  .gen{
-    margin-top: 15%;
-    margin-left: 23%;
-    font-size: 20px;
-    font-weight: 700;
-  }
-  
-  .sub-container{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .image{
-  border: 2px solid grey;
-  width: 12%;
-  height: 15vh;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  margin-left: 23%;
+*{
+  background: #EFF4FF;
+}
+
+.profile-line{
+  margin-left: 100px;
+  margin-top: 10px;
+  height: 1px;
+  width: 90%;
+  background-color: #ccc;
+}
+
+.prof{
+  /* border: 1px solid black; */
+  margin-left: 10%;
   margin-top: 2%;
+  font-size: 20px;
+  font-weight: 700;
+  color: #003480;
+  border-bottom:3px solid #003480 ;
+  width: max-content;
+}
+
+.sub-container{
+  /* border: 1px solid black; */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10px;
-  }
-  
-  .button{
-  /* border: 2px solid black; */
-  width: 40%;
-  margin-top: 2%;
-  height: 15vh;
+  background-color: white;
+  width:82%;
+  margin-left: 8%;
+  margin-top: 4%;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.gen{
   display: flex;
-  margin-left: 5%;
-  justify-content: space-around;
-  }
-  
-  .btn-1{
-  background-color: rgb(73, 73, 227);
-  margin: 15% 0 15% 0 ;
-  height: 5vh;
-  width: 25%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  margin-top: 10%;
-  }
-  
-  .btn-2{
-    background-color: white;
-  margin: 15% 0 15% 0 ;
-  height: 5vh;
-  width: 25%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  margin-top: 10%;
-  border: 1.5px solid red;
-  }
-  
-  .input-container {
-    /* background: #EFF4FF; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    /* border: 1px solid black; */
-    margin-top: 4%;
-    margin-left: 20%;
-  }
-  
-  .stylerow{
-    background: #EFF4FF;
-    display: flex;
-    gap:10%;
-    width: auto;
-  }
-  
-  .stylerow1{
-    margin-left: -45%;
-    margin-top: 5px;
-  }
-  
-  .input-container label {
-    margin-bottom: 10px;
-    text-align: left;
-    width: 100%;
-    /* border: 1px solid black; */
-  }
-  
-  .input-container input[type="text"],
-  .input-container input[type="email"],
-  .input-container input[type="tel"],
-  .input-container input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-  }
+  /* border:1px solid black; */
+  margin-left: 20px;
+  margin-top: 20px;
+  width: fit-content;
+  height: fit-content;
+  font-size: 22px;
+  font-weight: 700;
+  background-color: white;
+}
+
+.image-container{
+  /* border: 1px solid black; */
+  display: flex;
+  background-color: white;
+  margin-top: 7%;
+  margin-left: -7%;
+  width: 95%;
+}
+
+.image{
+  display: flex;
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 120px;
+  height: 120px;
+  margin-top: 3%;
+  margin-left: -13%;
+  background-color: white;
+}
+
+.profimg{
+  /* border: 1px solid black; */
+  background-color: white;
+  display: flex;
+  margin-top: 20%;
+  font-weight: 600;
+  font-size: 15px;
+  margin-left: 15px;
+}
+
+.button{
+  display: flex;
+  background-color: white;
+}
+
+.upload{
+  margin-left: 20%;
+  margin-top: 30%;
+  width: 50%;
+  height: 6%;
+}
+
+.delete{
+  margin-left: 20%;
+  margin-top: 30%;
+  width: 50%;
+  height: 6%;
+}
+
+.input-container {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  margin-top: 35%;
+  margin-bottom: 4%;
+  margin-left: -94%;
+  border-radius: 15px;
+  padding-bottom: 10px;
+  width: 80%;
+  padding: 20px 20px;
+}
+
+.stylerow{
+  display: flex;
+  gap:10%;
+  width: 100%;
+}
+
+.stylerow1{
+  width: 100%;
+}
+
+.input-container label {
+  margin-bottom: 10px;
+  text-align: left;
+  width: 100%;
+}
+
+.input-container input[type="text"],
+.input-container input[type="email"],
+.input-container input[type="tel"],
+.input-container input[type="password"] {
+outline: none;
+}
+
+.input-sub-container{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding: 10px;
+}
+
+.input-container input[type="password"] {
+  width: 80%;
+  display: flex;
+}
+
